2018-0x-xx 1.5.0 [xxxxxxx]
  + ...
  + Box and List diagrams hide all relationships
  . Database format changed (list_oder field for classifiers), up- and downwards compatible.
2018-05-11 1.4.0 [66861a9]
  + relationships can connect to ports
  + the repair-database function can detect and repair broken focused_feature keys in diagramelements
  + the repair-database function can detect and repair broken from/to_feature keys in relationships
2018-04-01 1.3.0 [7bc9dff]
  + lifelines are created and removed automatically for timing, sequence and communication diagrams
  + lifelines are drawn and can be selected/edited
  + ports can be created/selected/edited and are drawn
2018-03-04 1.2.0 [78421df]
  + all relations to/from multiple classifier instances are drawn
2018-01-23 1.1.0 [086e559]
  + greyed-out classifiers also grey-out their contained features
  . sqlite updated from 3.10.2 to 3.21.0
  . Database format changed.
    A newer crystal_facet_uml can still open older database files (and immediately update the file format).
    Older crystal_facet_uml cannot open database files created or opened by a newer crystal_facet_uml!
  + relations where source and destination are identical are beautified
  + for comments and requirements, the description is shown
2018-01-03 1.0.0 [4262282]
  + F7 in navigation view moves child diagram up and parent down
  + The text export contains IDs
2017-12-26 0.20.0 [534b171]
  + navigation mode: a newly initialized database shows a quick guide
  + navigation mode: root diagram has sky-blue background
  + orange background color marks new-object and new-diagram modes
  + link to the home page is added in the man page and on the startup screen
  + The 2nd click on the about button removes the about message
  + Ctrl-X/C/V,DEL work as expected during text editing
  + edit mode: Pink-selects elements only at the second click
2017-12-10 0.19.0 [221effc]
  + The default-names of new classifiers match their type